--- a/index.html
+++ b/index.html
@@ -1,31 +1,590 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Video</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>YOUR NAME — Biography</title>
+  <meta name="description" content="Biography page for YOUR NAME — YOUR TAGLINE." />
+
   <style>
-    body {
-      margin: 0;
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+    :root{
+      --bg: #0b0f17;
+      --panel: rgba(255,255,255,.06);
+      --panel2: rgba(255,255,255,.09);
+      --text: rgba(255,255,255,.92);
+      --muted: rgba(255,255,255,.68);
+      --faint: rgba(255,255,255,.46);
+      --border: rgba(255,255,255,.12);
+
+      --a1: #7c3aed; /* accent 1 */
+      --a2: #22d3ee; /* accent 2 */
+
+      --shadow: 0 10px 40px rgba(0,0,0,.45);
+      --radius: 18px;
+
+      --max: 1100px;
+      --pad: 22px;
     }
-    iframe {
-      width: 90vw;
-      height: 50vw;
-      max-width: 1000px;
-      max-height: 562px;
+
+    [data-theme="light"]{
+      --bg: #f6f7fb;
+      --panel: rgba(0,0,0,.04);
+      --panel2: rgba(0,0,0,.06);
+      --text: rgba(0,0,0,.88);
+      --muted: rgba(0,0,0,.62);
+      --faint: rgba(0,0,0,.44);
+      --border: rgba(0,0,0,.10);
+      --shadow: 0 14px 45px rgba(0,0,0,.12);
+    }
+
+    *{ box-sizing:border-box; }
+    html{ scroll-behavior:smooth; }
+    body{
+      margin:0;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color: var(--text);
+      background: radial-gradient(1200px 800px at 20% 10%, rgba(124,58,237,.22), transparent 60%),
+                  radial-gradient(1200px 800px at 80% 0%, rgba(34,211,238,.18), transparent 55%),
+                  var(--bg);
+      min-height:100vh;
+    }
+
+    a{ color:inherit; text-decoration:none; }
+    .container{ width:min(var(--max), 92vw); margin:0 auto; }
+
+    /* Top nav */
+    .nav{
+      position:sticky; top:0; z-index:50;
+      backdrop-filter: blur(12px);
+      background: linear-gradient(to bottom, rgba(0,0,0,.35), transparent);
+      border-bottom: 1px solid rgba(255,255,255,.06);
+    }
+    [data-theme="light"] .nav{
+      background: linear-gradient(to bottom, rgba(255,255,255,.85), rgba(255,255,255,.55));
+      border-bottom: 1px solid var(--border);
+    }
+    .nav-inner{
+      display:flex; align-items:center; justify-content:space-between;
+      padding: 14px 0;
+      gap:12px;
+    }
+    .brand{
+      display:flex; align-items:center; gap:10px;
+      font-weight:700;
+      letter-spacing:.2px;
+    }
+    .dot{
+      width:12px; height:12px; border-radius:999px;
+      background: linear-gradient(135deg, var(--a1), var(--a2));
+      box-shadow: 0 0 0 6px rgba(124,58,237,.10);
+    }
+    .links{
+      display:flex; align-items:center; gap:14px;
+      color: var(--muted);
+      font-size: 14px;
+    }
+    .links a{ padding:8px 10px; border-radius:999px; }
+    .links a:hover{ background: var(--panel); color: var(--text); }
+
+    .right{
+      display:flex; align-items:center; gap:10px;
+    }
+
+    .btn{
+      border:1px solid var(--border);
+      background: var(--panel);
+      color: var(--text);
+      padding:10px 12px;
+      border-radius: 999px;
+      display:inline-flex; align-items:center; gap:8px;
+      box-shadow: none;
+      cursor:pointer;
+      font-weight:600;
+      transition: transform .12s ease, background .12s ease;
+    }
+    .btn:hover{ background: var(--panel2); transform: translateY(-1px); }
+    .btn.primary{
+      border: none;
+      background: linear-gradient(135deg, var(--a1), var(--a2));
+      color: #071018;
+    }
+    .btn.primary:hover{ transform: translateY(-1px) scale(1.01); }
+    .btn:active{ transform: translateY(0px); }
+
+    /* Hero */
+    .hero{
+      padding: 54px 0 24px;
+    }
+    .hero-grid{
+      display:grid;
+      grid-template-columns: 1.1fr .9fr;
+      gap: 18px;
+      align-items: stretch;
+    }
+    @media (max-width: 920px){
+      .hero-grid{ grid-template-columns: 1fr; }
+      .links{ display:none; }
+    }
+
+    .card{
+      background: var(--panel);
+      border:1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+    }
+
+    .hero-main{
+      padding: 28px;
+      position:relative;
+      overflow:hidden;
+    }
+    .glow{
+      position:absolute;
+      inset:-120px -120px auto auto;
+      width: 320px; height: 320px;
+      background: radial-gradient(circle at 30% 30%, rgba(34,211,238,.55), transparent 60%),
+                  radial-gradient(circle at 60% 60%, rgba(124,58,237,.45), transparent 55%);
+      filter: blur(12px);
+      opacity:.65;
+      transform: rotate(12deg);
+      pointer-events:none;
+    }
+    .kicker{
+      display:inline-flex;
+      gap:10px;
+      align-items:center;
+      padding: 8px 12px;
+      border-radius: 999px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,.04);
+      color: var(--muted);
+      font-size: 13px;
+      margin-bottom: 14px;
+    }
+    [data-theme="light"] .kicker{ background: rgba(0,0,0,.03); }
+
+    h1{
+      margin:0 0 10px;
+      font-size: clamp(34px, 4vw, 54px);
+      line-height:1.02;
+      letter-spacing:-0.6px;
+    }
+    .sub{
+      margin: 0 0 18px;
+      color: var(--muted);
+      font-size: 16px;
+      line-height: 1.55;
+      max-width: 62ch;
+    }
+    .cta-row{
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px;
+      margin-top: 12px;
+    }
+
+    .hero-side{
+      padding: 18px;
+      display:flex;
+      flex-direction:column;
+      gap: 12px;
+    }
+    .mini{
+      padding: 16px;
+      border-radius: 16px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,.04);
+    }
+    [data-theme="light"] .mini{ background: rgba(0,0,0,.03); }
+
+    .mini h3{
+      margin: 0 0 8px;
+      font-size: 14px;
+      color: var(--muted);
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: .12em;
+    }
+    .facts{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+      margin-top: 10px;
+      color: var(--muted);
+      font-size: 14px;
+    }
+    .pill{
+      border:1px solid var(--border);
+      background: var(--panel);
+      padding: 8px 10px;
+      border-radius: 999px;
+      color: var(--muted);
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      gap:8px;
+      font-size: 13px;
+    }
+    .pill strong{ color: var(--text); font-weight: 700; }
+
+    /* Sections */
+    section{ padding: 22px 0; }
+    .section-title{
+      display:flex; align-items:flex-end; justify-content:space-between;
+      gap: 12px;
+      margin-bottom: 12px;
+    }
+    .section-title h2{
+      margin:0;
+      font-size: 20px;
+      letter-spacing:-0.2px;
+    }
+    .section-title p{
+      margin:0;
+      color: var(--muted);
+      font-size: 14px;
+    }
+
+    .grid-3{
+      display:grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 12px;
+    }
+    @media (max-width: 920px){
+      .grid-3{ grid-template-columns: 1fr; }
+    }
+
+    .item{
+      padding: 18px;
+      border-radius: 16px;
+      border:1px solid var(--border);
+      background: var(--panel);
+      transition: transform .12s ease, background .12s ease;
+    }
+    .item:hover{ transform: translateY(-2px); background: var(--panel2); }
+
+    .item h3{ margin:0 0 6px; font-size: 16px; }
+    .item p{ margin:0; color: var(--muted); line-height:1.55; font-size: 14px; }
+
+    /* Video */
+    .video-wrap{
+      padding: 18px;
+      border-radius: var(--radius);
+      border:1px solid var(--border);
+      background: var(--panel);
+      box-shadow: var(--shadow);
+    }
+    .player{
+      position:relative;
+      width:100%;
+      padding-top:56.25%;
+      border-radius: 16px;
+      overflow:hidden;
+      background:#000;
+      border:1px solid rgba(255,255,255,.10);
+    }
+    .player iframe, .player video{
+      position:absolute; inset:0;
+      width:100%; height:100%;
+      border:0;
+    }
+    .caption{
+      margin: 10px 2px 0;
+      color: var(--muted);
+      font-size: 14px;
+      line-height:1.55;
+    }
+
+    /* Skills */
+    .skills{
+      display:flex;
+      flex-wrap:wrap;
+      gap: 10px;
+    }
+
+    /* Footer */
+    footer{
+      padding: 24px 0 40px;
+      color: var(--faint);
+      font-size: 13px;
+      text-align:center;
+    }
+
+    /* Small helpers */
+    .muted{ color: var(--muted); }
+    .row{
+      display:flex; gap:10px; flex-wrap:wrap; align-items:center;
     }
   </style>
 </head>
+
 <body>
-  <iframe src="YOUR_VIDEO_EMBED_LINK"
-          frameborder="0"
-          allow="autoplay; fullscreen"
-          allowfullscreen>
-  </iframe>
+  <div class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="#top" aria-label="Home">
+        <span class="dot" aria-hidden="true"></span>
+        <span>YOUR NAME</span>
+      </a>
+
+      <nav class="links" aria-label="Site">
+        <a href="#about">About</a>
+        <a href="#work">What I do</a>
+        <a href="#video">Video</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </nav>
+
+      <div class="right">
+        <button class="btn" id="themeBtn" type="button" aria-label="Toggle theme">
+          <span id="themeIcon" aria-hidden="true">🌙</span>
+          <span class="muted">Theme</span>
+        </button>
+        <a class="btn primary" href="#contact">Get in touch</a>
+      </div>
+    </div>
+  </div>
+
+  <main id="top" class="container">
+    <!-- HERO -->
+    <div class="hero">
+      <div class="hero-grid">
+        <div class="card hero-main">
+          <div class="glow" aria-hidden="true"></div>
+
+          <div class="kicker">
+            <span>📍 YOUR CITY</span>
+            <span class="muted">•</span>
+            <span>Digital Transformation • AI • Automation</span>
+          </div>
+
+          <h1>YOUR NAME</h1>
+          <p class="sub">
+            YOUR TAGLINE — e.g. “I help teams turn messy processes into simple, automated systems.”
+            <br />
+            Add a second sentence that signals your focus and what makes you different.
+          </p>
+
+          <div class="cta-row">
+            <a class="btn primary" href="#projects">See my work</a>
+            <a class="btn" href="mailto:you@example.com">Email me</a>
+            <a class="btn" href="https://www.linkedin.com/in/YOURPROFILE" target="_blank" rel="noopener">LinkedIn</a>
+            <a class="btn" href="https://github.com/YOURUSERNAME" target="_blank" rel="noopener">GitHub</a>
+          </div>
+        </div>
+
+        <aside class="card hero-side">
+          <div class="mini">
+            <h3>Quick facts</h3>
+            <div class="facts">
+              <div class="pill"><strong>Focus:</strong>&nbsp;AI + Automation</div>
+              <div class="pill"><strong>Tools:</strong>&nbsp;UiPath, Python</div>
+              <div class="pill"><strong>Based:</strong>&nbsp;Europe</div>
+              <div class="pill"><strong>Status:</strong>&nbsp;Open to projects</div>
+            </div>
+          </div>
+
+          <div class="mini">
+            <h3>Currently</h3>
+            <p class="muted" style="margin:0; line-height:1.6">
+              Write one short, current sentence: what you’re studying/building right now and why it matters.
+            </p>
+          </div>
+
+          <div class="mini">
+            <h3>Signature</h3>
+            <p class="muted" style="margin:0; line-height:1.6">
+              A personal line (optional): “Chardi kala, clean systems.” / “Less noise, more outcomes.”
+            </p>
+          </div>
+        </aside>
+      </div>
+    </div>
+
+    <!-- ABOUT -->
+    <section id="about">
+      <div class="section-title">
+        <h2>About</h2>
+        <p>Short, human, specific.</p>
+      </div>
+
+      <div class="grid-3">
+        <div class="item" style="grid-column: span 2;">
+          <h3>My story</h3>
+          <p>
+            Write 4–6 lines about your background and what you’re about.
+            Keep it concrete: the kinds of problems you love solving, and the outcomes you care about.
+          </p>
+        </div>
+
+        <div class="item">
+          <h3>Highlights</h3>
+          <p>• Digital transformation student<br/>
+             • Automation-first mindset<br/>
+             • Systems + people focus<br/>
+             • Calm, outcome-driven execution</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- WHAT I DO -->
+    <section id="work">
+      <div class="section-title">
+        <h2>What I do</h2>
+        <p>Clear value in 3 cards.</p>
+      </div>
+
+      <div class="grid-3">
+        <div class="item">
+          <h3>Process Automation</h3>
+          <p>Design and build reliable automations that reduce manual work and errors.</p>
+        </div>
+        <div class="item">
+          <h3>AI-assisted Workflows</h3>
+          <p>Use LLMs responsibly to speed up analysis, drafting, routing, and decision support.</p>
+        </div>
+        <div class="item">
+          <h3>Digital Operating Model</h3>
+          <p>Make systems usable: roles, governance, metrics, and change adoption that sticks.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- VIDEO -->
+    <section id="video">
+      <div class="section-title">
+        <h2>Featured video</h2>
+        <p>A short intro or talk.</p>
+      </div>
+
+      <div class="video-wrap">
+        <div class="player" aria-label="Video">
+          <!-- OPTION 1: EMBED (YouTube/Vimeo) -->
+          <iframe
+            src="PASTE_YOUTUBE_OR_VIMEO_EMBED_URL_HERE"
+            allow="autoplay; fullscreen; picture-in-picture"
+            allowfullscreen
+            title="Featured video"></iframe>
+
+          <!-- OPTION 2: LOCAL MP4 (uncomment if you have video.mp4 in repo)
+          <video controls autoplay muted playsinline preload="metadata">
+            <source src="video.mp4" type="video/mp4" />
+          </video>
+          -->
+        </div>
+
+        <p class="caption">
+          1–2 lines about what this video is and who it’s for. Keep it simple and personal.
+        </p>
+      </div>
+    </section>
+
+    <!-- PROJECTS -->
+    <section id="projects">
+      <div class="section-title">
+        <h2>Projects</h2>
+        <p>Small list, strong signals.</p>
+      </div>
+
+      <div class="grid-3">
+        <a class="item" href="#" target="_blank" rel="noopener">
+          <h3>Project One</h3>
+          <p>One-line impact statement. Example: “Reduced processing time by 60% with automation.”</p>
+        </a>
+        <a class="item" href="#" target="_blank" rel="noopener">
+          <h3>Project Two</h3>
+          <p>One-line impact statement. Example: “Built a workflow that routes exceptions automatically.”</p>
+        </a>
+        <a class="item" href="#" target="_blank" rel="noopener">
+          <h3>Project Three</h3>
+          <p>One-line impact statement. Example: “Created a clean dashboard for operational visibility.”</p>
+        </a>
+      </div>
+    </section>
+
+    <!-- SKILLS -->
+    <section id="skills">
+      <div class="section-title">
+        <h2>Skills</h2>
+        <p>Keep it scannable.</p>
+      </div>
+
+      <div class="skills">
+        <span class="pill">UiPath</span>
+        <span class="pill">Process Mapping</span>
+        <span class="pill">Python</span>
+        <span class="pill">SQL</span>
+        <span class="pill">LLMs</span>
+        <span class="pill">Camunda / BPMN / DMN</span>
+        <span class="pill">Analytics</span>
+        <span class="pill">Stakeholder Management</span>
+        <span class="pill">Governance</span>
+        <span class="pill">Change Adoption</span>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact">
+      <div class="section-title">
+        <h2>Contact</h2>
+        <p>Make it easy.</p>
+      </div>
+
+      <div class="grid-3">
+        <div class="item" style="grid-column: span 2;">
+          <h3>Let’s talk</h3>
+          <p>
+            Write 2–4 lines: what kinds of collaborations you’re open to, and what you’ll reply fastest to.
+          </p>
+          <div class="row" style="margin-top:12px">
+            <a class="btn primary" href="mailto:you@example.com">Email: you@example.com</a>
+            <a class="btn" href="https://www.linkedin.com/in/YOURPROFILE" target="_blank" rel="noopener">Message on LinkedIn</a>
+          </div>
+        </div>
+
+        <div class="item">
+          <h3>Links</h3>
+          <p>
+            <a href="https://github.com/YOURUSERNAME" target="_blank" rel="noopener">GitHub</a><br/>
+            <a href="https://www.linkedin.com/in/YOURPROFILE" target="_blank" rel="noopener">LinkedIn</a><br/>
+            <a href="#" target="_blank" rel="noopener">Portfolio / CV</a>
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      © <span id="year"></span> YOUR NAME · Built with GitHub Pages
+    </footer>
+  </main>
+
+  <script>
+    // Year
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    // Theme toggle with localStorage
+    const root = document.documentElement;
+    const btn = document.getElementById("themeBtn");
+    const icon = document.getElementById("themeIcon");
+
+    function setTheme(theme){
+      document.body.setAttribute("data-theme", theme);
+      localStorage.setItem("theme", theme);
+      icon.textContent = (theme === "light") ? "☀️" : "🌙";
+    }
+
+    const saved = localStorage.getItem("theme");
+    if(saved){
+      setTheme(saved);
+    } else {
+      // Respect system preference if no saved setting
+      const prefersLight = window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches;
+      setTheme(prefersLight ? "light" : "dark");
+    }
+
+    btn.addEventListener("click", () => {
+      const current = document.body.getAttribute("data-theme") || "dark";
+      setTheme(current === "dark" ? "light" : "dark");
+    });
+  </script>
 </body>
 </html>
