--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>YOUR NAME — Biography</title>
+  <title>Narendra Modi — Criminal</title>
   <meta name="description" content="Biography page for YOUR NAME — YOUR TAGLINE." />
 
   <style>
@@ -323,7 +323,7 @@
     <div class="container nav-inner">
       <a class="brand" href="#top" aria-label="Home">
         <span class="dot" aria-hidden="true"></span>
-        <span>YOUR NAME</span>
+        <span>Narendra Modi</span>
       </a>
 
       <nav class="links" aria-label="Site">
@@ -339,7 +339,7 @@
           <span id="themeIcon" aria-hidden="true">🌙</span>
           <span class="muted">Theme</span>
         </button>
-        <a class="btn primary" href="#contact">Get in touch</a>
+        
       </div>
     </div>
   </div>
@@ -352,23 +352,25 @@
           <div class="glow" aria-hidden="true"></div>
 
           <div class="kicker">
-            <span>📍 YOUR CITY</span>
+            <span>📍 India</span>
             <span class="muted">•</span>
-            <span>Digital Transformation • AI • Automation</span>
+            <span>Butcher of Gujarat</span>
           </div>
 
-          <h1>YOUR NAME</h1>
+          <h1>Modi</h1>
           <p class="sub">
-            YOUR TAGLINE — e.g. “I help teams turn messy processes into simple, automated systems.”
+            A genocidal leader is in power in the world's most populous country. ”
             <br />
-            Add a second sentence that signals your focus and what makes you different.
+            He has committed a long list of crimes, yet he is the most celebrated person in his country. 
+            <br />
+            Some of links here. 
           </p>
 
           <div class="cta-row">
-            <a class="btn primary" href="#projects">See my work</a>
-            <a class="btn" href="mailto:you@example.com">Email me</a>
-            <a class="btn" href="https://www.linkedin.com/in/YOURPROFILE" target="_blank" rel="noopener">LinkedIn</a>
-            <a class="btn" href="https://github.com/YOURUSERNAME" target="_blank" rel="noopener">GitHub</a>
+            <a class="btn primary" href="https://www.imdb.com/de/title/tt32460944/" target="_blank" rel="noopener">India - Hate as Idealogy</a>
+            <a class="btn" href="https://en.wikipedia.org/wiki/2002_Gujarat_violence" target="_blank" rel="noopener">Gujrat violence</a>
+            <a class="btn" href="https://www.youtube.com/watch?v=6Dz9X4rlT_c" target="_blank" rel="noopener">Rise of RSS</a>
+            <a class="btn" href="https://www.youtube.com/watch?v=l1qvVp8XZg8" target="_blank" rel="noopener">A Secular India Under Threat </a>
           </div>
         </div>
 
@@ -376,17 +378,17 @@
           <div class="mini">
             <h3>Quick facts</h3>
             <div class="facts">
-              <div class="pill"><strong>Focus:</strong>&nbsp;AI + Automation</div>
-              <div class="pill"><strong>Tools:</strong>&nbsp;UiPath, Python</div>
+              <div class="pill"><strong>Criminal:</strong>&nbsp;yet free</div>
+              <div class="pill"><strong>Banned:</strong>&nbsp;internationally before becoming PM</div>
               <div class="pill"><strong>Based:</strong>&nbsp;Europe</div>
-              <div class="pill"><strong>Status:</strong>&nbsp;Open to projects</div>
+              <div class="pill"><strong>Status:</strong>&nbsp;Currently PM since 2014</div>
             </div>
           </div>
 
           <div class="mini">
             <h3>Currently</h3>
             <p class="muted" style="margin:0; line-height:1.6">
-              Write one short, current sentence: what you’re studying/building right now and why it matters.
+              s
             </p>
           </div>
 
