--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Narendra Modi — Criminal</title>
+  <title>Narendra Modi — Gandu</title>
   <meta name="description" content="Biography page for YOUR NAME — YOUR TAGLINE." />
 
   <style>
@@ -395,7 +395,7 @@
           <div class="mini">
             <h3>Signature</h3>
             <p class="muted" style="margin:0; line-height:1.6">
-              A personal line (optional): “Chardi kala, clean systems.” / “Less noise, more outcomes.”
+              bb
             </p>
           </div>
         </aside>
@@ -406,47 +406,46 @@
     <section id="about">
       <div class="section-title">
         <h2>About</h2>
-        <p>Short, human, specific.</p>
+        <p>S.</p>
       </div>
 
       <div class="grid-3">
         <div class="item" style="grid-column: span 2;">
-          <h3>My story</h3>
+          <h3>His Story</h3>
           <p>
-            Write 4–6 lines about your background and what you’re about.
-            Keep it concrete: the kinds of problems you love solving, and the outcomes you care about.
+            RSS
           </p>
         </div>
 
         <div class="item">
           <h3>Highlights</h3>
-          <p>• Digital transformation student<br/>
-             • Automation-first mindset<br/>
-             • Systems + people focus<br/>
-             • Calm, outcome-driven execution</p>
+          <p>• <br/>
+             • <br/>
+             • <br/>
+             • </p>
         </div>
       </div>
     </section>
 
-    <!-- WHAT I DO -->
+    <!-- WHAT HE DO -->
     <section id="work">
       <div class="section-title">
-        <h2>What I do</h2>
-        <p>Clear value in 3 cards.</p>
+        <h2>What </h2>
+        <p> cs.</p>
       </div>
 
       <div class="grid-3">
         <div class="item">
-          <h3>Process Automation</h3>
-          <p>Design and build reliable automations that reduce manual work and errors.</p>
+          <h3>Pn</h3>
+          <p>Ds.</p>
         </div>
         <div class="item">
-          <h3>AI-assisted Workflows</h3>
-          <p>Use LLMs responsibly to speed up analysis, drafting, routing, and decision support.</p>
+          <h3>As</h3>
+          <p>Use support.</p>
         </div>
         <div class="item">
-          <h3>Digital Operating Model</h3>
-          <p>Make systems usable: roles, governance, metrics, and change adoption that sticks.</p>
+          <h3>DOperating Model</h3>
+          <p>Make systems .</p>
         </div>
       </div>
     </section>
@@ -455,7 +454,7 @@
     <section id="video">
       <div class="section-title">
         <h2>Featured video</h2>
-        <p>A short intro or talk.</p>
+        <p>A.</p>
       </div>
 
       <div class="video-wrap">
@@ -475,7 +474,7 @@
         </div>
 
         <p class="caption">
-          1–2 lines about what this video is and who it’s for. Keep it simple and personal.
+          documentary.
         </p>
       </div>
     </section>
@@ -484,21 +483,21 @@
     <section id="projects">
       <div class="section-title">
         <h2>Projects</h2>
-        <p>Small list, strong signals.</p>
+        <p>Laws.</p>
       </div>
 
       <div class="grid-3">
         <a class="item" href="#" target="_blank" rel="noopener">
-          <h3>Project One</h3>
-          <p>One-line impact statement. Example: “Reduced processing time by 60% with automation.”</p>
+          <h3>CA</h3>
+          <p>Citizenship act</p>
         </a>
         <a class="item" href="#" target="_blank" rel="noopener">
-          <h3>Project Two</h3>
-          <p>One-line impact statement. Example: “Built a workflow that routes exceptions automatically.”</p>
+          <h3>Farmers</h3>
+          <p>Farmers protests</p>
         </a>
         <a class="item" href="#" target="_blank" rel="noopener">
-          <h3>Project Three</h3>
-          <p>One-line impact statement. Example: “Created a clean dashboard for operational visibility.”</p>
+          <h3>P3</h3>
+          <p>Osibility.”</p>
         </a>
       </div>
     </section>
@@ -506,28 +505,28 @@
     <!-- SKILLS -->
     <section id="skills">
       <div class="section-title">
-        <h2>Skills</h2>
+        <h2>Keywords</h2>
         <p>Keep it scannable.</p>
       </div>
 
       <div class="skills">
-        <span class="pill">UiPath</span>
-        <span class="pill">Process Mapping</span>
-        <span class="pill">Python</span>
-        <span class="pill">SQL</span>
-        <span class="pill">LLMs</span>
-        <span class="pill">Camunda / BPMN / DMN</span>
-        <span class="pill">Analytics</span>
-        <span class="pill">Stakeholder Management</span>
-        <span class="pill">Governance</span>
-        <span class="pill">Change Adoption</span>
+        <span class="pill">Gandu</span>
+        <span class="pill">Modi</span>
+        <span class="pill">Gen</span>
+        <span class="pill">Gujrat</span>
+        <span class="pill">Violence</span>
+        <span class="pill">RSS</span>
+        <span class="pill">BAns</span>
+        <span class="pill">Prompter</span>
+        <span class="pill">No press conference</span>
+        <span class="pill">Messia Complex</span>
       </div>
     </section>
 
     <!-- CONTACT -->
     <section id="contact">
       <div class="section-title">
-        <h2>Contact</h2>
+        <h2>dd</h2>
         <p>Make it easy.</p>
       </div>
 
@@ -535,7 +534,7 @@
         <div class="item" style="grid-column: span 2;">
           <h3>Let’s talk</h3>
           <p>
-            Write 2–4 lines: what kinds of collaborations you’re open to, and what you’ll reply fastest to.
+            okkkk
           </p>
           <div class="row" style="margin-top:12px">
             <a class="btn primary" href="mailto:you@example.com">Email: you@example.com</a>
@@ -546,16 +545,16 @@
         <div class="item">
           <h3>Links</h3>
           <p>
-            <a href="https://github.com/YOURUSERNAME" target="_blank" rel="noopener">GitHub</a><br/>
-            <a href="https://www.linkedin.com/in/YOURPROFILE" target="_blank" rel="noopener">LinkedIn</a><br/>
-            <a href="#" target="_blank" rel="noopener">Portfolio / CV</a>
+            <a href="#" target="_blank" rel="noopener">Arte</a><br/>
+            <a href="#" target="_blank" rel="noopener">BBC</a><br/>
+            <a href="#" target="_blank" rel="noopener">Pd</a>
           </p>
         </div>
       </div>
     </section>
 
     <footer>
-      © <span id="year"></span> YOUR NAME · Built with GitHub Pages
+      © <span id="year"></span> 
     </footer>
   </main>
 
