--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
             okkkk
           </p>
           <div class="row" style="margin-top:12px">
-            <a class="btn primary" href="mailto:you@example.com">Email: you@example.com</a>
-            <a class="btn" href="https://www.linkedin.com/in/YOURPROFILE" target="_blank" rel="noopener">Message on LinkedIn</a>
+            <a class="btn primary" href="mailto:+">Email: </a>
+            <a class="btn" href="#" target="_blank" rel="noopener">Message</a>
           </div>
         </div>
 
