--- a/index.html
+++ b/index.html
@@ -328,10 +328,10 @@
 
       <nav class="links" aria-label="Site">
         <a href="#about">About</a>
-        <a href="#work">What I do</a>
+        <a href="#work">History</a>
         <a href="#video">Video</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#projects">Crimes</a>
+        <a href="#contact"></a>
       </nav>
 
       <div class="right">
