--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
             <h3>Quick facts</h3>
             <div class="facts">
               <div class="pill"><strong>Criminal:</strong>&nbsp;yet free</div>
-              <div class="pill"><strong>Banned:</strong>&nbsp;internationally before becoming PM</div>
-              <div class="pill"><strong>Based:</strong>&nbsp;Europe</div>
-              <div class="pill"><strong>Status:</strong>&nbsp;Currently PM since 2014</div>
+              <div class="pill"><strong>Banned:</strong>&nbsp;before becoming PM</div>
+              <div class="pill"><strong>Based:</strong>&nbsp;India</div>
+              <div class="pill"><strong>Status:</strong>&nbsp;PM since 2014</div>
             </div>
           </div>
 
